fix(cookie-control): wrap CCPA buttons when container is too narrow

--- a/foundation_cms/static/scss/_cookie_control_override.scss
+++ b/foundation_cms/static/scss/_cookie_control_override.scss
@@ -108,6 +108,12 @@
     }
   }
 
+  #ccc-button-holder {
+    display: flex;
+    flex-wrap: wrap;
+    gap: rem-calc(8);
+  }
+
   .ccc-content--highlight {
     button.ccc-link.ccc-tabbable:focus {
       filter: none !important;
